--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,24 @@
   border-style: solid;
   border-color: #e5e7eb;
 }
-body{
+body {
   margin: 0;
   padding: 0;
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(5, 5, 5, 0.2);
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(5, 5, 5, 0.3);
 }
